tests/NormalTests/paczka1/fuzzy1/11168577.err
Error in line 6: eaTjv A329 84,2
Error in line 11: zonPpobTpWH S633 65,6
Error in line 19: bbPn A329 53,4
Error in line 5: WZOfBFT0ie A329 108,7
Error in line 25: VtloTlEi A767 84,0
Error in line 23: bbPn A686 65,9
Error in line 31: A767 S633 47,6
Error in line 28: VtloTlEi A329 17,3
